2003-06-25  Bruno Haible  <bruno@clisp.org>

	* readlink.m4: New file.

2003-06-22  Bruno Haible  <bruno@clisp.org>

	Portability to mingw32.
	* ssize_t.m4: New file, from GNU gettext.
	* safe-read.m4 (gl_PREREQ_SAFE_READ): Require gt_TYPE_SSIZE_T.
	* xreadlink.m4 (gl_XREADLINK): Require gt_TYPE_SSIZE_T.

2003-06-11  Bruno Haible  <bruno@clisp.org>

	* sysexits.m4: New file.

2003-06-10  Simon Josefsson  <jas@extundo.com>

	* strchrnul.m4: New file.

2003-06-07  Bruno Haible  <bruno@clisp.org>

	* fnmatch.m4 (_AC_LIBOBJ_FNMATCH, gl_FUNC_FNMATCH_POSIX,
	gl_FUNC_FNMATCH_GNU): Set FNMATCH_H instead of invoking
	AC_CONFIG_LINKS. Needed to allow for a different name of the lib
	directory.
	* poll.m4 (gl_FUNC_POLL): Set POLL_H instead of invoking
	AC_CONFIG_LINKS. Needed to allow for a different name of the lib
	directory.

2003-06-04  Paul Eggert  <eggert@twinsun.com>

	* human.m4 (gl_HUMAN): Require AM_STDBOOL_H.  Check for
	locale.h, localeconv.  This merges changes from coreutils.

	* mktime.m4 (AC_FUNC_MKTIME): New macro, taken from Autoconf CVS.
	It can be removed after the next Autoconf is released.
	* exclude.m4 (gl_EXCLUDE): Don't check for sys/types.h; no loner
	needed.

2003-05-30  Bruno Haible  <bruno@clisp.org>

	* gettext.m4: Upgrade to gettext-0.12.1.
	* nls.m4: New file, from gettext-0.12.1.
	* po.m4: New file, from gettext-0.12.1.
	* progtest.m4: Upgrade to gettext-0.12.1.

2003-05-28  Paul Eggert  <eggert@twinsun.com>

	Assume the headers required for C89 freestanding compilers.
	* backupfile.m4 (gl_BACKUPFILE): Don't check for limits.h.
	* fsusage.m4 (gl_PREREQ_FSUSAGE_EXTRA): Likewise.
	* human.m4 (gl_HUMAN): Likewise.
	* pathmax.m4 (gl_PATHMAX): Likewise.
	* rpmatch.m4 (gl_FUNC_RPMATCH): Likewise.
	* userspec.m4 (gl_USERSPEC): Likewise.
	* xreadlink.m4 (gl_XREADLINK): Likewise.
	* m4/xstrtol.m4 (gl_PREREQ_XSTRTOL): Likewise.
	* quote.m4 (gl_QUOTE): Don't check for stddef.h.

2003-05-26  Jim Meyering  <jim@meyering.net>
